# bliss-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  ci_check.sh
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: analysis_pipeline.rs  chroma.rs  decoder.rs  descriptors.rs  utils.rs
benches/common/: mod.rs
data/: chroma-filter.npy  chroma-interval.npy  chroma-stft-normalized-expected.npy  chroma.npy  convolve.npy  convolve_odd.npy  downsampled.npy  empty.cue  f_analysis.npy  f_analysis_normalized.npy  filtered_features.npy  interval-feature-matrix.npy  librosa-decoded.npy  librosa-stft.npy  no-tags-cue.cue  old_config.json  old_database.sql  piano.flac  pitch-tuning.npy  s16_mono_22_5kHz.flac  s16_mono_44_1_kHz.flac  s16_stereo_22_5kHz.flac  s32_mono_44_1_kHz.flac  s32_stereo_44_1_kHz.flac  sample-config.json  sorted_features.npy  spectrum-chroma-mags.npy  spectrum-chroma-pitches.npy  spectrum-chroma.npy  testcue.cue  testcue.flac  tone_11080Hz.flac  white_noise.flac
examples/: analyse.rs  analyze.rs  distance.rs  library.rs  library_extra_info.rs  playlist.rs
src/: aubio.rs  chroma.rs  cue.rs  distance.rs  lib.rs  library.rs  misc.rs  playlist.rs  song.rs  temporal.rs  timbral.rs  utils.rs
src/song/: decoder.rs  mod.rs
src/song/decoder/: ffmpeg.rs  symphonia.rs
