[package]
name = "bliss-audio"
version = "0.12.0"
build = "build.rs"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A song analysis library for making playlists"
homepage = "https://lelele.io/bliss.html"
repository = "https://github.com/Polochon-street/bliss-rs"
keywords = ["audio", "analysis", "MIR", "playlist", "similarity"]
readme = "README.md"
exclude = ["data/"]

[package.metadata.docs.rs]
features = ["library", "ffmpeg", "analysis"]
no-default-features = true

[features]
default = ["analysis", "ffmpeg"]
# Enable audio analysis (requires rustfft). Disable this if you only need
# the playlist/distance math (Song, Analysis, NUMBER_FEATURES, playlist module).
analysis = ["dep:rustfft"]
# Enable song decoding with ffmpeg. Activated by default, and needed for
# almost all use-cases, disable it at your own risk!
# It is only useful if you want to implement the decoding of the tracks yourself
# and just feed them to bliss, so you don't depend on ffmpeg.
# TODO make ffmpeg a test-dep
ffmpeg = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
# Build ffmpeg instead of using the host's.
build-ffmpeg = ["ffmpeg-next/build"]
ffmpeg-static = ["ffmpeg-next/static"]
# Build for raspberry pis
rpi = ["ffmpeg-next/rpi"]
# Use if you want to build python bindings with maturin.
python-bindings = ["analysis"]
# Enable the benchmarks with `cargo +nightly bench --features=bench`
bench = ["analysis", "dep:criterion"]
library = [
    "analysis",
    "serde",
    "dep:rusqlite",
    "dep:dirs",
    "dep:tempdir",
    "dep:anyhow",
    "dep:serde_ini",
    "dep:serde_json",
    "dep:indicatif",
    "ndarray/serde",
]
serde = ["dep:serde", "extended-isolation-forest/serde"]
integration-tests = []
# Use to access the Symphonia-based alternative decoder
symphonia = ["dep:symphonia", "dep:rubato", "dep:audioadapter-buffers"]
symphonia-aac = ["symphonia", "symphonia/aac"]
symphonia-all = [
    "symphonia",
    "symphonia-aac",
    "symphonia-flac",
    "symphonia-isomp4",
    "symphonia-mp3",
    "symphonia-ogg",
    "symphonia-vorbis",
    "symphonia-wav",
]
symphonia-flac = ["symphonia", "symphonia/flac"]
symphonia-isomp4 = ["symphonia", "symphonia/isomp4"]
symphonia-mp3 = ["symphonia", "symphonia/mp3"]
symphonia-ogg = ["symphonia", "symphonia/ogg"]
symphonia-vorbis = ["symphonia", "symphonia/vorbis"]
symphonia-wav = [
    "symphonia",
    "symphonia/wav",
    "symphonia/pcm",
    "symphonia/adpcm",
]
symphonia-alac = ["symphonia", "symphonia/isomp4", "symphonia/alac"]
symphonia-aiff = ["symphonia", "symphonia/aiff", "symphonia/pcm"]


[dependencies]
ffmpeg-next = { version = "8.1.0", optional = true }
ffmpeg-sys-next = { version = "8.1.0", optional = true, default-features = false }
log = "0.4.30"
ndarray = "0.17.2"
ndarray-stats = "0.7.0"
noisy_float = "0.2.1"
rustfft = { version = "6.4.1", optional = true }
thiserror = "2.0.18"
strum = "0.28.0"
strum_macros = "0.28.0"
rcue = "0.1.3"
extended-isolation-forest = { version = "0.2.3", default-features = false }

# Deps for the library feature
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
serde_ini = { version = "0.2.0", optional = true }
tempdir = { version = "0.3.7", optional = true }
rusqlite = { version = "0.40.0", optional = true }
dirs = { version = "6.0.0", optional = true }
anyhow = { version = "1.0.102", optional = true }
indicatif = { version = "0.18.4", optional = true }
symphonia = { version = "0.6.0", optional = true, default-features = false, features = [
    "opt-simd",
] }
rubato = { version = "3.0.0", optional = true, features = ["fft_resampler"]}
audioadapter-buffers = { version = "3.0.0", optional = true }

# Bench dependency
criterion = { version = "0.8.2", optional = true }

[dev-dependencies]
ndarray-npy = { version = "0.10.0", default-features = false }
mime_guess = "2.0.5"
glob = "0.3.3"
anyhow = "1.0.102"
clap = "4.6.1"
pretty_assertions = "1.4.1"
serde_json = "1.0.150"
adler32 = "1.2.0"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
debug = true

[[bench]]
name = "utils"
harness = false
required-features = ["bench"]

[[bench]]
name = "descriptors"
harness = false
required-features = ["bench"]

[[bench]]
name = "chroma"
harness = false
required-features = ["bench"]

[[bench]]
name = "decoder"
harness = false
required-features = ["bench"]

[[bench]]
name = "analysis_pipeline"
harness = false
required-features = ["bench"]

[[example]]
name = "library"
required-features = ["library", "ffmpeg"]

[[example]]
name = "library_extra_info"
required-features = ["library", "ffmpeg"]

[[example]]
name = "playlist"
required-features = ["serde", "ffmpeg"]

[[example]]
name = "distance"
required-features = ["ffmpeg"]

[[example]]
name = "analyze"
required-features = ["ffmpeg"]
